--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="socials">
                     <span>
                         >
-                <a href="https://tiktok.com/@2wnis" style="text-decoration:#FFFFFF; font-family: derk; font-size: 1em;">tiktok</a>
+                <a href="https://tiktok.com/@2wnis" style="text-decoration:none; font-family: derk; font-size: 1em #FFFFFF;">tiktok</a>
                     </span>
                     <span>
                         >
