--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <meta property="twitter:image" content="https://imgur.com/a/RfHRxXI">
         <meta name="theme-color" content="#2f3136">
         <link rel="stylesheet" href="assets/css/main.css">
+        <style>
+            .socials a {
+                text-decoration:none; 
+                font-family: derk; 
+                font-size: 1em;
+                color: white;
+            }
+        </style>
     </head>
     <body>
         <main>
@@ -48,21 +56,22 @@
                 <div class="socials">
                     <span>
                         >
-                <a href="https://tiktok.com/@2wnis" style="text-decoration:none; font-family: derk; font-size: 1em #FFFFFF;">tiktok</a>
+                        <a href="https://tiktok.com/@2wnis">tiktok</a>
                     </span>
                     <span>
                         >
-                <a href="https://instagram.com/david2rixch" style="text-decoration:none; font-family: derk; font-size: 1em;">instagram</a>
+                        <a href="https://instagram.com/david2rixch">instagram</a>
                     </span>
                     <span>
                         >
-                <a href="https://cash.app/$2wnontop" style="text-decoration:none; font-family: derk; font-size: 1em;">cashapp</a>
-                   <span>
+                        <a href="https://cash.app/$2wnontop">cashapp</a>
+                    </span>
+                    <span>
                         >
-                 <a href="" style="text-decoration:none; font-family: derk; font-size: 1em;">2wn#9059</a>
-                   <span>
+                        <a href="">2wn#9059</a>
+                    </span>
+                </div>
             </div>
         </main>
-    
-</body>
+    </body>
 </html>
