--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <input type="checkbox" autocomplete="off" id="overlay-toggle">
             <div class="overlay fullscreen">
                 <label for="overlay-toggle" onclick="audioPlay();videoPlay()">
-                    <span class="no-hover" style="font-family: derk; font-size: 0.6em;">tap to enter, are u sped?</span>
-                    <span class="hover" style="font-family: derk; font-size: 0.6em;">click to enter, are u sped?</span>
+                    <span class="no-hover" style="font-family: derk; font-size: 0.6em;">𝚝𝚊𝚙 𝚝𝚘 𝚎𝚗𝚝𝚎𝚛</span>
+                    <span class="hover" style="font-family: derk; font-size: 0.6em;">𝚌𝚕𝚒𝚌𝚔 𝚝𝚘 𝚎𝚗𝚝𝚎𝚛</span>
                 </label>
             </div>
             <audio loop="" preload="auto" id="audio">
